--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free SMS Texting</title>
     <link rel="stylesheet" href="style.css">
+  <script data-ad-client="ca-pub-1835500137160582" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
  
